...
              isEmailTextField: false,
            ),
            Gaps.v16,
            FormButton(
              onTap: _onNextTap,
              disabled: _username.isEmpty,
              text: 'Next',
            ),
          ],
        ),
      ),
    );
  }
...
